@@ -6,7 +6,7 @@ endif
 
 SUBDIRS = . moz-plugin gdk-pixbuf-loader gtk-engine data #doc
 lib_LTLIBRARIES = librsvg-2.la
-bin_PROGRAMS = rsvg $(target_rsvg_view)
+bin_PROGRAMS = rsvg $(target_rsvg_view) rsvg-convert
 noinst_PROGRAMS = test-performance
 
 man_MANS = rsvg.1
@@ -101,6 +101,11 @@ rsvg_SOURCES=test-rsvg.c
 rsvg_LDFLAGS =
 rsvg_DEPENDENCIES = $(DEPS)
 rsvg_LDADD = $(LDADDS) $(libm)
+
+rsvg_convert_SOURCES=rsvg-cairo.c
+rsvg_convert_LDFLAGS =
+rsvg_convert_DEPENDENCIES = $(DEPS)
+rsvg_convert_LDADD = $(LDADDS) $(libm)
 
 test_performance_SOURCES=test-performance.c
 test_performance_LDFLAGS =
